# pipe-works-world-policies

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  codecov.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  dependency-update.yml  release-please.yml
src/pipeworks_world_policies/: __init__.py
tests/: test_worlds_root.py
tools/: bootstrap_local_workspace.sh
worlds/: README.md
worlds/daily_undertaking/world/: latest.json  publish_2741a7bbdc725040ad3a1ab91b997d8b31c4dbbd69ce4f89e069f270f6331bc8.json  publish_843983b400f24ebf72b496064ad9af8f5ed22533f29ef194bbaa9ea218b1c492.json
worlds/pipeworks_web/world/: latest.json  publish_93a21dabdcc7dc4efcb4ec11c52539aa3aea0ad91d2b70dc75d3259bd5700e94.json  publish_aa9fb9fb85e826ba01baea164c21807aacb9bc3e6a5971d6fe54fbf6f7ab6e06.json
